K8S/mssql-cmd-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-cmd-depl 
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: mssql-cmd
  template: 
    metadata: 
      labels: 
        app: mssql-cmd
    spec: 
      containers: 
        - name: mssql-cmd
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports: 
            - containerPort: 1433
          volumeMounts:
            - mountPath: /var/opt/mssql/data
              name: mssqldb
      volumes:
        - name: mssqldb
          persistentVolumeClaim:
            claimName: mssql-cmd-claim
---
apiVersion: v1
kind: Service
metadata: 
  name: mssql-cmd-clusterip-srv 
spec: 
  type: ClusterIP
  selector: 
    app: mssql-cmd
  ports: 
    - name: mssql-cmd 
      protocol: TCP
      port: 1433
      targetPort: 1433
