K8S/platforms-np-srv.yaml
apiVersion: v1
kind: Service 
metadata: 
  name: platformnpservice-srv 
spec: 
  type: NodePort
  selector: 
    app: platformservice
  ports: 
    - name: http
      protocol: TCP
      port: 80       # Porta exposta pelo Service
      targetPort: 5000  # Porta no container onde a aplicação está escutando
